--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -35,8 +35,8 @@
           <a class="flex-sm-fill text-sm-center nav-link" href="#home">Home</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="#tentang">Tentang</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="#projects">Projek</a>
-          <a class="flex-sm-fill text-sm-center nav-link" href="#">Sertifikat</a>
-          <a class="flex-sm-fill text-sm-center nav-link" href="#contact">Kontak</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="#sekil">Skill</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="#kontak">Kontak</a>
         </nav>
       </div>
     </div>
@@ -166,7 +166,7 @@
   <!-- Projects End-->
 
   <!-- Skill -->
-  <section class="jumbotron" id="tentang">
+  <section class="jumbotron" id="skill">
     <div class="container">
       <div class="row text-center mb-5">
         <div class="col">
@@ -201,7 +201,7 @@
   <!-- Skill End -->
 
   <!-- Kontak saya -->
-  <section id="projects">
+  <section id="kontak">
     <div class="container">
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Kontak Saya</h1>
