--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -59,7 +59,7 @@
   <!-- Header End -->
 
   <!-- Jumbotron About -->
-  <section class="jumbotron" id="tentang">
+  <section id="tentang">
     <div class="container">
       <div class="row text-center mb-5">
         <div class="col">
