--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -209,6 +209,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <form class="shadow p-3 mb-5 bg-white rounded">
+            <fieldset disabled>
             <div class="mb-3">
               <label for="Name" class="form-label">Nama Lengkap</label>
               <input type="text" class="form-control" id="name" aria-describedby="emailHelp" />
@@ -222,6 +223,7 @@
               <textarea class="form-control" id="pesan" rows="3"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">kirim</button>
+              </fieldset>
           </form>
         </div>
       </div>
