--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -212,15 +212,15 @@
             <fieldset disabled>
             <div class="mb-3">
               <label for="Name" class="form-label">Nama Lengkap</label>
-              <input type="text" class="form-control" id="name" aria-describedby="emailHelp" />
+              <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Cooming Soon 😀"/>
             </div>
             <div class="mb-3">
               <label for="Email1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" />
+              <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Cooming Soon 😀"/>
             </div>
             <div class="mb-3">
               <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3"></textarea>
+              <textarea class="form-control" id="pesan" rows="3" placeholder="Cooming Soon 😀"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">kirim</button>
               </fieldset>
