--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -5,9 +5,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portofolio | Andi Wicaksono</title>
+  
+  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+  <!-- CSS Saya -->
   <link rel="stylesheet" type="text/css" href="styles.css" />
+
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/img/profil/profil.png">
 </head>
 
@@ -65,7 +74,7 @@
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
           <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-            class="shadow rounded-circle img-thumbnail" />
+            class="shadow rounded-circle img-thumbnail data-aos="flip-left" />
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
       </div>
@@ -223,7 +232,7 @@
               <textarea class="form-control" id="pesan" rows="3" placeholder="Coming Soon 😀"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">kirim</button>
-              </fieldset>
+            </fieldset>
           </form>
         </div>
       </div>
@@ -243,9 +252,16 @@
   </footer>
   <!-- Footer End-->
 
+  <!-- Script Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+  <!-- Script AOS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
