--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-right">
           <p>
             Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
             SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
@@ -88,7 +88,7 @@
             CSS, dan Bootstrap untuk mencapai tujuan karir saya.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-left">
           <p>
             Semua pengalaman dan pembelajaran ini telah membantu saya
             mempersiapkan diri untuk masa depan yang sukses dalam bidang
@@ -114,7 +114,7 @@
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Projek Saya</h1>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" data-aos="flip-down">
         <div class="col-md-4 mb-4">
           <div class="card shadow-lg">
             <img src="img/card/webportofolio.png" class="card-img-top" alt="webfilm" />
@@ -176,7 +176,7 @@
 
   <!-- Skill -->
   <section class="jumbotron" id="skill">
-    <div class="container">
+    <div class="container" data-aos="flip-down">
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5"> Skill</h1>
@@ -211,7 +211,7 @@
 
   <!-- Kontak saya -->
   <section id="kontak">
-    <div class="container">
+    <div class="container" data-aos="zoom-in-up">
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Kontak Saya</h1>
       </div>
