--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -176,13 +176,13 @@
 
   <!-- Skill -->
   <section class="jumbotron" id="skill">
-    <div class="container" data-aos="flip-down">
+    <div class="container">
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5"> Skill</h1>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center">
+      <div class="row justify-content-center fs-5 text-center" data-aos="flip-down">
         <div class="col-md-4">
           <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
             class="shadow rounded-circle img-thumbnail" />
