--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -211,11 +211,11 @@
 
   <!-- Kontak saya -->
   <section id="kontak">
-    <div class="container" data-aos="zoom-in-up">
+    <div class="container">
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Kontak Saya</h1>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center"  data-aos="zoom-in-up">
         <div class="col-md-6">
           <form class="shadow p-3 mb-5 bg-white rounded">
             <fieldset disabled>
