--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -74,12 +74,12 @@
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
           <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-            class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="270"  data-aos-duration="2000"/>
+            class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="250"  data-aos-duration="2000"/>
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-6" data-aos="fade-right">
+        <div class="col-md-6" data-aos="fade-right" data-aos-offset="250"  data-aos-duration="2000">
           <p>
             Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
             SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
@@ -88,7 +88,7 @@
             CSS, dan Bootstrap untuk mencapai tujuan karir saya.
           </p>
         </div>
-        <div class="col-md-6" data-aos="fade-left">
+        <div class="col-md-6" data-aos="fade-left" data-aos-offset="250"  data-aos-duration="2000">
           <p>
             Semua pengalaman dan pembelajaran ini telah membantu saya
             mempersiapkan diri untuk masa depan yang sukses dalam bidang
@@ -114,7 +114,7 @@
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Projek Saya</h1>
       </div>
-      <div class="row justify-content-center" data-aos="flip-down">
+      <div class="row justify-content-center" data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000">
         <div class="col-md-4 mb-4">
           <div class="card shadow-lg">
             <img src="img/card/webportofolio.png" class="card-img-top" alt="webfilm" />
@@ -182,7 +182,7 @@
           <h1 class="shadow pb-3 display-5 mb-5"> Skill</h1>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center" data-aos="flip-down">
+      <div class="row justify-content-center fs-5 text-center" data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000">
         <div class="col-md-4">
           <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
             class="shadow rounded-circle img-thumbnail" />
@@ -215,7 +215,7 @@
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Kontak Saya</h1>
       </div>
-      <div class="row justify-content-center"  data-aos="zoom-in-up">
+      <div class="row justify-content-center"  data-aos="zoom-in-up" data-aos-offset="250"  data-aos-duration="2000">
         <div class="col-md-6">
           <form class="shadow p-3 mb-5 bg-white rounded">
             <fieldset disabled>
