--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -114,8 +114,8 @@
       <div class="row text-center mb-4">
         <h1 class="shadow pb-3 display-5 text-light">Projek Saya</h1>
       </div>
-      <div class="row justify-content-center" data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000">
-        <div class="col-md-4 mb-4">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="200">
           <div class="card shadow-lg">
             <img src="img/card/webportofolio.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
@@ -127,7 +127,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="400">
           <div class="card shadow-lg">
             <img src="img/card/webfilm.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
@@ -139,7 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="600">
           <div class="card shadow-lg">
             <img src="img/card/Arduino Smart Door Lock.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
@@ -151,7 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="800">
           <div class="card shadow-lg">
             <img src="img/card/Motion Detection Alarm.jpg" class="card-img-top" alt="webfilm" />
             <div class="card-body">
@@ -182,18 +182,16 @@
           <h1 class="shadow pb-3 display-5 mb-5"> Skill</h1>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center" data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000">
-        <div class="col-md-4">
-          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
+      <div class="row justify-content-center fs-5 text-center">
+        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="200">
+          <img src="img/card/HTML.png" alt="HTML" width="200"
             class="shadow rounded-circle img-thumbnail" />
         </div>
-        <div class="col-md-4">
-          <p>
-            <img src="img/card/CSS.png" alt="Andi Wicaksono" width="200"
+        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="400">
+            <img src="img/card/CSS.png" alt="CSS" width="200"
               class="shadow rounded-circle img-thumbnail" />
-          </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250"  data-aos-duration="2000" data-aos-delay="600">
           <img src="img/card/Bootstrap.png" alt="Andi Wicaksono" width="200"
             class="shadow rounded-circle img-thumbnail" />
         </div>
