--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -88,7 +88,7 @@
             CSS, dan Bootstrap untuk mencapai tujuan karir saya.
           </p>
         </div>
-        <div class="col-md-6" data-aos="fade-left" data-aos-offset="250" data-aos-duration="2000" data-aos-delay="400">
+        <div class="col-md-6" data-aos="fade-left" data-aos-offset="250" data-aos-duration="2000">
           <p>
             Semua pengalaman dan pembelajaran ini telah membantu saya
             mempersiapkan diri untuk masa depan yang sukses dalam bidang
