--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -254,7 +254,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
+  
+  <!-- Script GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script>
+    gsap.from('.mavbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'elastic' });
+  </script>
+  
   <!-- Script AOS -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
