--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -258,7 +258,7 @@
   <!-- Script GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script>
-    gsap.from('.mavbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'elastic' });
+    gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'elastic' });
   </script>
   
   <!-- Script AOS -->
