--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -58,10 +58,10 @@
     <div class="header-content container">
       <h1 class="header-title">
         <span class="up">Hai Saya!</span>
-        <span class="down">Andi Wicaksono</span>
+        <span class="down"></span>
       </h1>
       <p class="header-subtitle">
-        Siswa Jurusan TKJ dengan minat Web Degsiner
+        Siswa Jurusan TKJ dengan minat Web Designer
       </p>
     </div>
   </header>
@@ -257,8 +257,10 @@
   
   <!-- Script GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
   <script>
-    gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'elastic' });
+    gsap.registerPlugin(TextPlugin)
+    gsap.to('.down', { duration: 2, text: 'Andi Wicaksono' });
   </script>
   
   <!-- Script AOS -->
