--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -60,9 +60,7 @@
         <span class="up">Hai Saya!</span>
         <span class="down"></span>
       </h1>
-      <p class="header-subtitle">
-        Siswa Jurusan TKJ dengan minat Web Designer
-      </p>
+      <p class="header-subtitle"></p>
     </div>
   </header>
   <!-- Header End -->
@@ -261,6 +259,7 @@
   <script>
     gsap.registerPlugin(TextPlugin)
     gsap.to('.down', { duration: 2, text: 'Andi Wicaksono' });
+    gsap.to('.header-subtitle', { duration: 2, delay: 2, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
   </script>
   
   <!-- Script AOS -->
