--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -259,7 +259,7 @@
   <script>
     gsap.registerPlugin(TextPlugin)
     gsap.to('.down', {duration: 2, delay: 0.5, text: 'Andi Wicaksono'});
-    gsap.to('.header-subtitle', { duration: 4, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
+    gsap.to('.header-subtitle', { duration: 4, opacity: 0, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
     gsap.from('.up', { duration: 1, x: -50, opacity: 0, ease: 'back'});
   </script>
   
