--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -258,8 +258,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
   <script>
     gsap.registerPlugin(TextPlugin)
-    gsap.to('.down', {duration: 2, delay: 0.5, text: 'Andi Wicaksono'});
-    gsap.to('.header-subtitle', { duration: 4, opacity: 0, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
+    gsap.to('.down', {duration: 2, delay: 0.5, opacity: 0, text: 'Andi Wicaksono'});
+    gsap.to('.header-subtitle', { duration: 4, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
     gsap.from('.up', { duration: 1, x: -50, opacity: 0, ease: 'back'});
   </script>
   
