--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -58,7 +58,7 @@
     <div class="header-content container">
       <h1 class="header-title">
         <span class="up">Hai Saya!</span>
-        <span class="down">onoskaciw idna</span>
+        <span class="down text-light">idna onoskaciw</span>
       </h1>
       <p class="header-subtitle"></p>
     </div>
@@ -258,7 +258,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
   <script>
     gsap.registerPlugin(TextPlugin)
-    gsap.to('.down', {duration: 2, delay: 0.5, opacity: 0, text: 'Andi Wicaksono'});
+    gsap.to('.down', {duration: 2, delay: 0.5, text: 'Andi Wicaksono'});
     gsap.to('.header-subtitle', { duration: 4, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
     gsap.from('.up', { duration: 1, x: -50, opacity: 0, ease: 'back'});
   </script>
