--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -243,8 +243,8 @@
   <!-- Kontak Saya End-->
 
   <!-- Footer -->
-  <footer class="bg-dark pb-1">
-    <p>tes</p>
+  <footer class="bg-dark text-light text-center pb-1">
+    <p>Created with by Andi Wicaksono</p>
   </footer>
   <!-- Footer End-->
 
