--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -244,7 +244,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center pb-1">
-    <p>Created with by Andi Wicaksono</p>
+    <p>Created with | by <strong>Andi Wicaksono</strong></p>
   </footer>
   <!-- Footer End-->
 
