--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -44,7 +44,7 @@
           <a class="flex-sm-fill text-sm-center nav-link" href="#home">Home</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="#tentang">Tentang</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="#projects">Projek</a>
-          <a class="flex-sm-fill text-sm-center nav-link" href="#sekil">Skill</a>
+          <a class="flex-sm-fill text-sm-center nav-link" href="#skill">Skill</a>
           <a class="flex-sm-fill text-sm-center nav-link" href="#kontak">Kontak</a>
         </nav>
       </div>
