--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portofolio | Andi Wicaksono</title>
   
-  <!-- Bootstrap Icons -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
@@ -71,8 +71,9 @@
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
-          <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-            class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="250"  data-aos-duration="2000"/>
+          <a href="img/profil/profil2.jpg" data-lightbox="profile-image" data-title="Andi Wicaksono">
+          <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200" class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+          </a>
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
       </div>
