--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -16,6 +16,9 @@
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+  <!-- Lightbo -->
+  <link rel="stylesheet" href="path/to/lightbox2/css/lightbox.css">
+
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/img/profil/profil.png">
 </head>
@@ -269,6 +272,9 @@
   <script>
     AOS.init();
   </script>
+
+  <!-- Script Lightbox -->
+  <script src="path/to/lightbox2/js/lightbox.js"></script>
 </body>
 
 </html>
