--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -74,9 +74,8 @@
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
-          <a href="img/profil/profil2.jpg" data-lightbox="profile-image" data-title="Andi Wicaksono">
-          <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200" class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-          </a>
+          <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+          class="shadow rounded-circle img-thumbnail" data-toggle="modal" data-target="#profileModal" />
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
       </div>
@@ -166,6 +165,26 @@
           </div>
         </div>
       </div>
+      <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="profileModalLabel">Data Diri - Andi Wicaksono</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Tempatkan data diri Anda di sini -->
+        <p>Nama: Andi Wicaksono</p>
+        <p>Email: example@example.com</p>
+        <!-- Dan seterusnya -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
