--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -98,6 +98,27 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="profileModalLabel">Data Diri - Andi Wicaksono</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Tempatkan data diri Anda di sini -->
+        <p>Nama: Andi Wicaksono</p>
+        <p>Email: example@example.com</p>
+        <!-- Dan seterusnya -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
+      </div>
+    </div>
+  </div>
+</div>
+    
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#868fba" fill-opacity="1"
         d="M0,64L0,128L60,128L60,192L120,192L120,288L180,288L180,32L240,32L240,192L300,192L300,160L360,160L360,224L420,224L420,128L480,128L480,224L540,224L540,128L600,128L600,128L660,128L660,160L720,160L720,288L780,288L780,160L840,160L840,32L900,32L900,160L960,160L960,256L1020,256L1020,288L1080,288L1080,192L1140,192L1140,288L1200,288L1200,192L1260,192L1260,160L1320,160L1320,64L1380,64L1380,288L1440,288L1440,320L1380,320L1380,320L1320,320L1320,320L1260,320L1260,320L1200,320L1200,320L1140,320L1140,320L1080,320L1080,320L1020,320L1020,320L960,320L960,320L900,320L900,320L840,320L840,320L780,320L780,320L720,320L720,320L660,320L660,320L600,320L600,320L540,320L540,320L480,320L480,320L420,320L420,320L360,320L360,320L300,320L300,320L240,320L240,320L180,320L180,320L120,320L120,320L60,320L60,320L0,320L0,320Z">
