--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -71,6 +71,11 @@
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
+          <h6 class="mt-3">
+									<a class="button3" href="#" data-toggle="modal" data-target="#trailerModal2b">
+										<i class="fa fa-play-circle align-middle me-1"></i> Watch Trailer & Information
+									</a>
+								</h6>
            <button data-toggle="modal" data-target="#profileModal">
             <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
               class="shadow rounded-circle img-thumbnail" />
@@ -102,6 +107,27 @@
     </div>
 </section>
 
+<div class="modal fade" id="trailerModal2" tabindex="-1" role="dialog"
+					aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-body">
+								<div class="d-flex justify-content-between align-items-center">
+									<!-- Tempatkan keterangan Anda di sini -->
+									<p class="text-light mb-3"><strong>Transformers: Rise of the Beasts | Official
+											Trailer (2023 Movie)</strong></p>
+									<!-- Tempatkan tombol Anda di sini -->
+									<button type="button" class="btn btn-danger mb-3"
+										data-dismiss="modal">Close</button>
+								</div>
+								<iframe width="854" height="480"
+									src="https://www.youtube.com/embed/itnqEauWQZM?si=EPjM0WP-hJsgcDuT" frameborder="0"
+									allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+				</div>
+  
 <!-- Modal -->
 <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
   <div class="modal-dialog">
