--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -72,7 +72,7 @@
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
             <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-              class="shadow rounded-circle img-thumbnail" />
+            class="shadow rounded-circle img-thumbnail" data-aos="flip-left" data-aos-offset="250"  data-aos-duration="2000"/>
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
       </div>
