--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -104,16 +104,19 @@
   Launch demo modal
 </button>
 
-<!-- Modal -->
+<div class="modal-dialog modal-dialog-centered">
+  <div class="modal-content">
+    <!-- Isi modal Anda -->
+    <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered"> <!-- Tambahkan kelas modal-dialog-centered di sini -->
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <!-- Isi modal Anda -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -122,6 +125,10 @@
     </div>
   </div>
 </div>
+
+  </div>
+</div>
+
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#868fba" fill-opacity="1"
