--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -101,8 +101,11 @@
 
   <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
+        Launch demo modal <img src="path/to/your/image.jpg" alt="Andi Wicaksono" width="200"
+     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" />
+
     </button>
+
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
