--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -71,7 +71,7 @@
       <div class="row text-center mb-5">
         <div class="col">
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-transparant" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" />
 </button>
