--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -73,7 +73,8 @@
           <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
             <button type="button" class="btn btn-transparant" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" />
+     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" data-aos="flip-left" data-aos-offset="250"
+                    data-aos-duration="2000"  />
 </button>
           <h1 class="display-4 mt-3">Andi Wicaksono</h1>
         </div>
