--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -102,10 +102,6 @@
       </div>
     </div>
 
-  <!-- Button trigger modal -->
-
-
-
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -117,7 +113,8 @@
                 <div class="modal-body">
                     <!-- Isi data diri Anda di sini -->
                     <p>Nama: Andi Wicaksono</p>
-                    <p>Email: example@example.com</p>
+                    <p>Tanggal Lahir: 16 April 2006</p>
+                    <p>Sekolah: 16 April SMK N 3 Yogyakarta</p>
                     <!-- Dan seterusnya -->
                 </div>
                 <div class="modal-footer">
