--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -112,6 +112,9 @@
                 </div>
                 <div class="modal-body">
                     <!-- Isi data diri Anda di sini -->
+                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" data-aos="flip-left" data-aos-offset="250"
+                    data-aos-duration="2000"  />
                     <p>Nama: Andi Wicaksono</p>
                     <p>Tanggal Lahir: 16 April 2006</p>
                     <p>Sekolah: 16 April SMK N 3 Yogyakarta</p>
