--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -76,10 +76,10 @@
      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" data-aos="flip-left" data-aos-offset="250"
                     data-aos-duration="2000"  />
 </button>
-<button type="button" class="btn btn-transparant" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <h1 class="display-4 mt-3">Andi Wicaksono</h1>
+<button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <h1 class="display-4 mt-3">Andi Wicaksono</h1>
 </button>
-          
+
         </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
