--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -69,18 +69,15 @@
 <section id="tentang">
     <div class="container">
       <div class="row text-center mb-5">
-        <div class="col">
-          <h1 class="shadow pb-3 display-5 mb-5">Tentang</h1>
-            <button type="button" class="btn btn-transparant" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" data-aos="flip-left" data-aos-offset="250"
-                    data-aos-duration="2000"  />
-</button>
-<button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    <h1 class="display-4 mt-3">Andi Wicaksono</h1>
-</button>
-
-        </div>
+          <div class="col">
+              <h1 class="shadow pb-3 display-5 mb-4">Tentang</h1>
+              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                      data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                  <h1 class="display-4 mt-3">Andi Wicaksono</h1>
+              </button>
+          </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
         <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000">
@@ -105,30 +102,34 @@
       </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title fs-5" id="exampleModalLabel">Data Diri - Andi Wicaksono</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- Isi data diri Anda di sini -->
-                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-     class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal" data-aos="flip-left" data-aos-offset="250"
-                    data-aos-duration="2000"  />
-                    <p>Nama: Andi Wicaksono</p>
-                    <p>Tanggal Lahir: 16 April 2006</p>
-                    <p>Sekolah: 16 April SMK N 3 Yogyakarta</p>
-                    <!-- Dan seterusnya -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                </div>
+    <!-- Modal POP UP -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title fs-5" id="exampleModalLabel">
+                    Data Diri - Andi Wicaksono
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Isi data diri Anda di sini -->
+                <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                    class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                    data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                <p>Nama: Andi Wicaksono</p>
+                <p>Tanggal Lahir: 16 April 2006</p>
+                <p>Sekolah: 16 April SMK N 3 Yogyakarta</p>
+                <!-- Dan seterusnya -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Tutup
+                </button>
             </div>
         </div>
     </div>
+</div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#868fba" fill-opacity="1"
