--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -75,7 +75,7 @@
                   <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
                       class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-                  <h1 class="display-4 mt-3">Andi Wicaksono</h1>
+                  <h1 class="display-4 mt-3" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
           </div>
       </div>
