--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -119,7 +119,8 @@
                         data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                     <p>Nama: Andi Wicaksono</p>
                     <p>Tanggal Lahir: 16 April 2006</p>
-                    <p>Sekolah: 16 April SMK N 3 Yogyakarta</p>
+                    <p>Sekolah: SMK N 3 Yogyakarta</p>
+                    <p><strong>D.I Yogyakarta<strong></p>
                     <!-- Dan seterusnya -->
                 </div>
                 <div class="modal-footer">
