--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -107,7 +107,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title fs-5" id="exampleModalLabel">
+                    <h5 class="modal-title fs-5 bg bg-dark" id="exampleModalLabel">
                         Data Diri - Andi Wicaksono
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -123,7 +123,7 @@
                     <p><strong>D.I Yogyakarta<strong></p>
                     <!-- Dan seterusnya -->
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer bg bg-dark">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Tutup
                     </button>
