--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -106,8 +106,8 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title fs-5 bg bg-dark" id="exampleModalLabel">
+                <div class="modal-header bg bg-dark">
+                    <h5 class="modal-title fs-5" id="exampleModalLabel">
                         Data Diri - Andi Wicaksono
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -123,7 +123,7 @@
                     <p><strong>D.I Yogyakarta<strong></p>
                     <!-- Dan seterusnya -->
                 </div>
-                <div class="modal-footer bg bg-dark">
+                <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Tutup
                     </button>
