--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -106,7 +106,7 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header bg bg-dark">
+                <div class="modal-header">
                     <h5 class="modal-title fs-5" id="exampleModalLabel">
                         Data Diri - Andi Wicaksono
                     </h5>
