--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -106,9 +106,9 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header" style="background-image: url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 1440 320\"><path fill=\"#ffffff\" fill-opacity=\"1\" d=\"M0,32L0,224L102.9,224L102.9,64L205.7,64L205.7,96L308.6,96L308.6,288L411.4,288L411.4,192L514.3,192L514.3,32L617.1,32L617.1,224L720,224L720,128L822.9,128L822.9,192L925.7,192L925.7,256L1028.6,256L1028.6,32L1131.4,32L1131.4,256L1234.3,256L1234.3,128L1337.1,128L1337.1,256L1440,256L1440,320L1337.1,320L1337.1,320L1234.3,320L1234.3,320L1131.4,320L1131.4,320L1028.6,320L1028.6,320L925.7,320L925.7,320L822.9,320L822.9,320L720,320L720,320L617.1,320L617.1,320L514.3,320L514.3,320L411.4,320L411.4,320L308.6,320L308.6,320L205.7,320L205.7,320L102.9,320L102.9,320L0,320L0,320Z\"></path></svg>')">
+                 <div class="modal-header">
                     <h5 class="modal-title fs-5" id="exampleModalLabel">
-                        Data Diri - Andi Wicaksono
+                    Data Diri - Andi Wicaksono
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -123,7 +123,8 @@
                     <p><strong>D.I Yogyakarta<strong></p>
                     <!-- Dan seterusnya -->
                 </div>
-                <div class="modal-footer" style="background-image: url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 1440 320\"><path fill=\"#ffffff\" fill-opacity=\"1\" d=\"M0,32L0,224L102.9,224L102.9,64L205.7,64L205.7,96L308.6,96L308.6,288L411.4,288L411.4,192L514.3,192L514.3,32L617.1,32L617.1,224L720,224L720,128L822.9,128L822.9,192L925.7,192L925.7,256L1028.6,256L1028.6,32L1131.4,32L1131.4,256L1234.3,256L1234.3,128L1337.1,128L1337.1,256L1440,256L1440,320L1337.1,320L1337.1,320L1234.3,320L1234.3,320L1131.4,320L1131.4,320L1028.6,320L1028.6,320L925.7,320L925.7,320L822.9,320L822.9,320L720,320L720,320L617.1,320L617.1,320L514.3,320L514.3,320L411.4,320L411.4,320L308.6,320L308.6,320L205.7,320L205.7,320L102.9,320L102.9,320L0,320L0,320Z\"></path></svg>')">
+                <div class="modal-footer">
+                <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
                 </div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#868fba" fill-opacity="1" d="M0,0L0,288L102.9,288L102.9,64L205.7,64L205.7,192L308.6,192L308.6,224L411.4,224L411.4,32L514.3,32L514.3,96L617.1,96L617.1,32L720,32L720,224L822.9,224L822.9,192L925.7,192L925.7,64L1028.6,64L1028.6,128L1131.4,128L1131.4,128L1234.3,128L1234.3,192L1337.1,192L1337.1,32L1440,32L1440,320L1337.1,320L1337.1,320L1234.3,320L1234.3,320L1131.4,320L1131.4,320L1028.6,320L1028.6,320L925.7,320L925.7,320L822.9,320L822.9,320L720,320L720,320L617.1,320L617.1,320L514.3,320L514.3,320L411.4,320L411.4,320L308.6,320L308.6,320L205.7,320L205.7,320L102.9,320L102.9,320L0,320L0,320Z"></path></svg>     
             </div>
