--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -164,7 +164,7 @@
               <p class="card-text">
                 Website ini berisi kumpulan film-film dengan berbgai genre.
               </p>
-              <a href="#" class="btn btn-primary">Kunjungi</a>
+              <a href="https://zoom21-film.vercel.app/" class="btn btn-primary">Kunjungi</a>
             </div>
           </div>
         </div>
