--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -71,7 +71,7 @@
       <div class="row text-center mb-5">
           <div class="col">
               <h1 class="shadow pb-3 display-5 mb-4">Tentang</h1>
-              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup">
                   <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
                       class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
@@ -102,8 +102,8 @@
       </div>
     </div>
 
-    <!-- Modal POP UP -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal POP UP 1 -->
+    <div class="modal fade" id="popup 1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                  <div class="modal-header">
@@ -212,10 +212,12 @@
         </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250" data-aos-duration="2000" data-aos-delay="200">
-          <img src="img/card/HTML.png" alt="HTML" width="200"
-            class="shadow rounded-circle img-thumbnail" />
-        </div>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup2">
+                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                      data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                  <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
+              </button>
         <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250" data-aos-duration="2000" data-aos-delay="400">
             <img src="img/card/CSS.png" alt="CSS" width="200"
               class="shadow rounded-circle img-thumbnail" />
@@ -225,9 +227,35 @@
             class="shadow rounded-circle img-thumbnail" />
         </div>
       </div>
-      
     </div>
 
+    <!-- Modal POP UP 2 -->
+    <div class="modal fade" id="popup2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                 <div class="modal-header">
+                    <h5 class="modal-title fs-5" id="exampleModalLabel">
+                    Data Diri - Andi Wicaksono
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Isi data diri Anda di sini -->
+                    <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                        class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                    <p>Nama: Andi Wicaksono</p>
+                    <p>Tanggal Lahir: 16 April 2006</p>
+                    <p>Sekolah: SMK N 3 Yogyakarta</p>
+                    <p><strong>D.I Yogyakarta<strong></p>
+                </div>
+                <div class="modal-footer">
+                <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
+                </div>     
+            </div>
+        </div>
+    </div>
+    
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#868fba" fill-opacity="1"
         d="M0,64L0,128L60,128L60,192L120,192L120,288L180,288L180,32L240,32L240,192L300,192L300,160L360,160L360,224L420,224L420,128L480,128L480,224L540,224L540,128L600,128L600,128L660,128L660,160L720,160L720,288L780,288L780,160L840,160L840,32L900,32L900,160L960,160L960,256L1020,256L1020,288L1080,288L1080,192L1140,192L1140,288L1200,288L1200,192L1260,192L1260,160L1320,160L1320,64L1380,64L1380,288L1440,288L1440,320L1380,320L1380,320L1320,320L1320,320L1260,320L1260,320L1200,320L1200,320L1140,320L1140,320L1080,320L1080,320L1020,320L1020,320L960,320L960,320L900,320L900,320L840,320L840,320L780,320L780,320L720,320L720,320L660,320L660,320L600,320L600,320L540,320L540,320L480,320L480,320L420,320L420,320L360,320L360,320L300,320L300,320L240,320L240,320L180,320L180,320L120,320L120,320L60,320L60,320L0,320L0,320Z">
