--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -71,9 +71,9 @@
       <div class="row text-center mb-5">
           <div class="col">
               <h1 class="shadow pb-3 display-5 mb-4">Tentang</h1>
-              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup">
+              <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup1">
                   <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup1"
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
@@ -103,7 +103,7 @@
     </div>
 
     <!-- Modal POP UP 1 -->
-    <div class="modal fade" id="popup 1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="popup1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                  <div class="modal-header">
@@ -213,8 +213,8 @@
       </div>
       <div class="row justify-content-center fs-5 text-center">
         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup2">
-                  <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
-                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
+                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup2"
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
